--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bcryptjs": "^3.0.2",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^2.0.2",
     "mysql": "^2.18.1"
   }
 }
