完成基本的api后端搭建，进行和前端后台的联调测试

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,9 @@ dist
 dist-ssr
 *.local
 
+# User-uploaded files and static assets
+data/
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
